v0.2.0, 09/02/2013 -- Don't differentiate between page headers when caching.
v0.1.1, 07/20/2013 -- Added safety check for invalidation middleware.
v0.1.0, 07/09/2013 -- Initial release.